--- a/app/src/main/res/layout/activity_class_intro.xml
+++ b/app/src/main/res/layout/activity_class_intro.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_continue"
         android:layout_width="152dp"
         android:layout_height="61dp"
         android:layout_marginTop="40dp"
