--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         app:srcCompat="@drawable/dstudent" />
 
     <ImageView
-        android:id="@+id/imageView22"
+        android:id="@+id/schedule_icon"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="84dp"
@@ -80,7 +80,7 @@
         app:srcCompat="@drawable/dtime" />
 
     <ImageView
-        android:id="@+id/imageView23"
+        android:id="@+id/salary_icon"
         android:layout_width="106dp"
         android:layout_height="105dp"
         android:layout_marginTop="32dp"
@@ -129,7 +129,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView22" />
+        app:layout_constraintTop_toBottomOf="@+id/schedule_icon" />
 
     <ImageView
         android:id="@+id/imageView24"
@@ -140,7 +140,7 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.187"
-        app:layout_constraintStart_toEndOf="@+id/imageView22"
+        app:layout_constraintStart_toEndOf="@+id/schedule_icon"
         app:layout_constraintTop_toBottomOf="@+id/textView14"
         app:srcCompat="@drawable/dhall" />
 
@@ -172,7 +172,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView23" />
+        app:layout_constraintTop_toBottomOf="@+id/salary_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
