--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -12,57 +12,13 @@
         android:id="@+id/tv_kadd"
         android:layout_width="347dp"
         android:layout_height="39dp"
-        android:text="Add Teacher / Employee"
+        android:layout_marginTop="60dp"
+        android:text="Add Teacher"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cons_klayout1" />
-
-    <RadioGroup
-        android:id="@+id/rg_TeacherEmp"
-        android:layout_width="211dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginRight="176dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_ktype">
-
-        <RadioButton
-            android:id="@+id/rb_Employee"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:text="Employee"
-            android:textColor="#FAF6F6" />
-
-        <RadioButton
-            android:id="@+id/rb_teacher"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Teacher"
-            android:textColor="#F4F0F0" />
-
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/tv_ktype"
-        android:layout_width="114dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="273dp"
-        android:layout_marginRight="273dp"
-        android:text="Select Type"
-        android:textColor="#101010"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_kadd" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_kaddName"
@@ -70,25 +26,26 @@
         android:layout_height="30dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="273dp"
         android:layout_marginRight="273dp"
         android:text="Full Name"
         android:textColor="#121212"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rg_TeacherEmp" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_kadd" />
 
     <EditText
         android:id="@+id/pt_kFullName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="303dp"
+        android:layout_height="46dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="177dp"
-        android:layout_marginRight="177dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginRight="84dp"
         android:ems="10"
         android:hint="@string/pt_kFullName"
         android:inputType="textPersonName"
@@ -96,14 +53,13 @@
         android:textColor="#F4F1F1"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_kaddName" />
 
     <TextView
         android:id="@+id/tv_kContact"
         android:layout_width="227dp"
-        android:layout_height="23dp"
+        android:layout_height="30dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="10dp"
@@ -118,13 +74,13 @@
 
     <EditText
         android:id="@+id/pt_mobNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="304dp"
+        android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="177dp"
-        android:layout_marginRight="177dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginRight="84dp"
         android:ems="10"
         android:hint="@string/pt_mobNum"
         android:inputType="textPersonName"
@@ -152,17 +108,17 @@
 
     <EditText
         android:id="@+id/pt_ksubject"
-        android:layout_width="274dp"
-        android:layout_height="40dp"
+        android:layout_width="306dp"
+        android:layout_height="44dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="113dp"
-        android:layout_marginRight="113dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="81dp"
+        android:layout_marginRight="81dp"
         android:ems="10"
         android:hint="@string/pt_ksubject"
         android:inputType="textPersonName"
-        android:text="Enter Subject (Only for teachers)"
+        android:text="Enter Subject"
         android:textColor="#F4F0F0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,13 +126,13 @@
 
     <TextView
         android:id="@+id/tv_idCard"
-        android:layout_width="192dp"
-        android:layout_height="0dp"
+        android:layout_width="233dp"
+        android:layout_height="26dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="195dp"
-        android:layout_marginRight="195dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="154dp"
+        android:layout_marginRight="154dp"
         android:text="National ID Number"
         android:textColor="#121111"
         android:textSize="20sp"
@@ -186,13 +142,13 @@
 
     <EditText
         android:id="@+id/pt_kidcard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="307dp"
+        android:layout_height="42dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="177dp"
-        android:layout_marginRight="177dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
         android:ems="10"
         android:hint="@string/pt_kidcard"
         android:inputType="textPersonName"
@@ -220,13 +176,13 @@
 
     <EditText
         android:id="@+id/pt_kaddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="311dp"
+        android:layout_height="46dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="178dp"
-        android:layout_marginRight="178dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginRight="76dp"
         android:ems="10"
         android:hint="@string/pt_kaddress"
         android:inputType="textPersonName"
@@ -237,56 +193,96 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_kaddress" />
 
     <Button
-        android:id="@+id/btn_ksubmit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="50dp"
+        android:id="@+id/btn_ksadd"
+        android:layout_width="98dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:hint="@string/btn_ksubmit"
-        android:text="Submit"
+        android:text="Add"
         app:backgroundTint="#00BCD4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ksview2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pt_kaddress"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/pt_kaddress" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cons_klayout1"
         android:layout_width="411dp"
         android:layout_height="53dp"
-        android:layout_marginBottom="1dp"
-        android:background="#00BCD4"
-        app:layout_constraintBottom_toTopOf="@+id/tv_kadd"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="#00BCD4">
 
         <TextView
             android:id="@+id/tv_klaytopic"
             android:layout_width="310dp"
             android:layout_height="37dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="4dp"
-            android:text="Teacher / Employee Management"
+            android:text="Teacher Management"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.355"
+            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.625" />
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="48dp"
             android:layout_height="41dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginLeft="3dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_klaytopic"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/backarrowk" />
+            app:srcCompat="@drawable/backarrowk"
+            tools:layout_editor_absoluteY="6dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <Button
+        android:id="@+id/btn_ksview2"
+        android:layout_width="98dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginRight="92dp"
+        android:hint="@string/btn_ksubmit"
+        android:text="View"
+        app:backgroundTint="#00BCD4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pt_kaddress" />
+
+    <Button
+        android:id="@+id/btn_ksedit"
+        android:layout_width="98dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="16dp"
+        android:hint="@string/btn_ksubmit"
+        android:text="Edit"
+        app:backgroundTint="#00BCD4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ksdelete"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_ksadd" />
+
+    <Button
+        android:id="@+id/btn_ksdelete"
+        android:layout_width="98dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginRight="92dp"
+        android:layout_marginBottom="16dp"
+        android:hint="@string/btn_ksubmit"
+        android:text="Delete"
+        app:backgroundTint="#00BCD4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_ksview2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
