--- a/app/src/main/res/layout/activity_view_student.xml
+++ b/app/src/main/res/layout/activity_view_student.xml
@@ -61,7 +61,7 @@
         android:layout_width="380dp"
         android:layout_height="550dp"
         android:layout_marginTop="16dp"
-        android:background="#CCCACA"
+        android:background="#5400BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stu_view_topic" />
