--- a/app/src/main/res/layout/activity_view_schedule.xml
+++ b/app/src/main/res/layout/activity_view_schedule.xml
@@ -50,8 +50,9 @@
         android:layout_height="61dp"
         android:gravity="center"
         android:text="View schedules"
-        android:textColor="#090909"
-        android:textSize="17sp"
+        android:textColor="@color/black"
+        android:textSize="19sp"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
